[gd_scene load_steps=14 format=3 uid="uid://cglsxsyeetk5d"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_j8o5q"]
[ext_resource type="Texture2D" uid="uid://0sfy2gs22wmh" path="res://FknQrN.png" id="1_wawos"]
[ext_resource type="FontFile" uid="uid://4ivejuabvoq3" path="res://Game Bubble.ttf" id="2_g4q8t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3a456"]
texture = ExtResource("1_wawos")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ky7ji"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dia2a"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exidr"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lcmxm"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ntmgd"]
bg_color = Color(0.65834, 0.65834, 0.65834, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tw3k0"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvkvu"]
bg_color = Color(0.20871, 0.20871, 0.20871, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ke0t"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32hju"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8o5q")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3a456")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.5
offset_top = -44.0
offset_right = 210.5
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky7ji")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_dia2a")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_exidr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_lcmxm")
theme_override_styles/hover = SubResource("StyleBoxFlat_ntmgd")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_tw3k0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pvkvu")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_1ke0t")
theme_override_styles/normal = SubResource("StyleBoxFlat_32hju")
text = "Pradėti žaidimą"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky7ji")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_dia2a")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_exidr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_lcmxm")
theme_override_styles/hover = SubResource("StyleBoxFlat_ntmgd")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_tw3k0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pvkvu")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_1ke0t")
theme_override_styles/normal = SubResource("StyleBoxFlat_32hju")
text = "Nustatymai"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky7ji")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_dia2a")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_exidr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_lcmxm")
theme_override_styles/hover = SubResource("StyleBoxFlat_ntmgd")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_tw3k0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pvkvu")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_1ke0t")
theme_override_styles/normal = SubResource("StyleBoxFlat_32hju")
text = "Išeiti"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.5
offset_top = -247.0
offset_right = 233.5
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_g4q8t")
theme_override_font_sizes/font_size = 60
text = "CogniGame"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
